Copied files from previous project, insalled all necessary packages, fixed navigation and vector icons

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # OSX
 #
 .DS_Store
-
+constants/APIKEY.js
+methods/fetchFromServer.js
+store/actions/ApiActions.js
+store/reducers/ApiReducer.js
 # Xcode
 #
 build/
