--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^5.8.0",
+    "@react-native-community/picker": "^1.3.0",
     "@react-navigation/bottom-tabs": "^5.3.3",
     "@react-navigation/material-bottom-tabs": "^5.1.14",
     "@react-navigation/native": "^5.2.3",
@@ -24,6 +25,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.7.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.9",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
