--- a/ios/GrocerEatsWithoutExpo/Info.plist
+++ b/ios/GrocerEatsWithoutExpo/Info.plist
@@ -71,6 +71,17 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>coiny-regular.ttf</string>
+		<string>Sofia-Bold.ttf</string>
+		<string>Sofia-Medium.ttf</string>
+		<string>Sofia-Regular.ttf</string>
+		<string>coiny.ttf</string>
+		<string>sofia-bold.ttf</string>
+		<string>sofia-med.ttf</string>
+		<string>sofia.ttf</string>
+		<string>bold.ttf</string>
+		<string>sofiaBold.ttf</string>
+		<string>sofia-Bold.ttf</string>
 	</array>
 </dict>
 </plist>
