--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.7.0",
+    "react-native-sqlite-storage": "^5.0.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.9",
     "react-redux": "^7.2.0",
